--- a/app/src/main/res/layout/bouquet_main.xml
+++ b/app/src/main/res/layout/bouquet_main.xml
@@ -1,35 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
 
-        <TextView
-            android:id="@+id/txt"
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:layout_marginTop="10dp"
-            android:text="LISTE DES CHAÎNES"
-            android:textColor="#000000"
-            android:textStyle="bold"
-            android:textSize="20dp" />
+    <TextView
+        android:id="@+id/txt"
+        android:layout_width="fill_parent"
+        android:layout_height="35dp"
+        android:gravity="center"
+        android:layout_marginTop="10dp"
+        android:text="LISTE DES CHAÎNES"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:textSize="25dp"
+        android:background="#CC3333"
+        />
 
     <EditText
         android:id="@+id/edit_recherche"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
         android:hint="Recherche..."
-        android:inputType="textVisiblePassword"
         >
     </EditText>
 
-        <ListView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@android:id/list"/>
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@android:id/list"/>
 
-    </LinearLayout>
+</LinearLayout>
