--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -19,8 +19,9 @@
                 android:layout_height="wrap_content"
                 android:text="Video1"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="#339966"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textSize="15dp"
+                />
         </LinearLayout>
 
     </LinearLayout>
