--- a/app/src/main/res/layout/bouquet_main.xml
+++ b/app/src/main/res/layout/bouquet_main.xml
@@ -11,28 +11,25 @@
         android:id="@+id/txt"
         android:layout_width="fill_parent"
         android:layout_height="35dp"
-        android:gravity="center"
         android:layout_marginTop="10dp"
+        android:background="#CC3333"
+        android:gravity="center"
         android:text="LISTE DES CHAÎNES"
         android:textColor="#FFFFFF"
-        android:textStyle="bold"
         android:textSize="25dp"
-        android:background="#CC3333"
-        />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/edit_recherche"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
-        android:hint="Recherche..."
-        >
-    </EditText>
+        android:layout_marginTop="10dp"
+        android:hint="Recherche..."></EditText>
 
     <ListView
+        android:id="@android:id/list"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:id="@android:id/list"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
