--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -2,11 +2,10 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ScrollView01"
+    style="@style/Widget.Design.NavigationView"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:fillViewport="false"
-    style="@style/Widget.Design.NavigationView"
-    >
+    android:fillViewport="false">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -16,43 +15,43 @@
         android:paddingRight="5dp">
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/txt"
                 android:layout_width="fill_parent"
                 android:layout_height="35dp"
-                android:gravity="center"
                 android:layout_marginTop="10dp"
+                android:background="#CC3333"
+                android:gravity="center"
                 android:text="Création du compte"
                 android:textColor="#FFFFFF"
-                android:textStyle="bold"
                 android:textSize="25dp"
-                android:background="#CC3333"
-                />
+                android:textStyle="bold" />
 
             <LinearLayout
-                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="25dp"
+                android:orientation="vertical"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:paddingRight="20dp"
+                android:paddingTop="25dp">
 
                 <!--  Name Label -->
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="8dp">
-                    <EditText android:id="@+id/username"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="10dp">
+
+                    <EditText
+                        android:id="@+id/username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="text"
-                        android:hint="Identifiant" />
+                        android:hint="Identifiant"
+                        android:inputType="text" />
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -74,134 +73,130 @@
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp">
-                    <EditText android:id="@+id/password"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp">
+
+                    <EditText
+                        android:id="@+id/password"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPassword"
                         android:hint="Mot de passe"
-                        />
+                        android:inputType="textPassword" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp">
-                    <EditText android:id="@+id/Confirmpassword"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp">
+
+                    <EditText
+                        android:id="@+id/Confirmpassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPassword"
-                        android:hint="Confirme mot de passe"/>
+                        android:hint="Confirme mot de passe"
+                        android:inputType="textPassword" />
                 </android.support.design.widget.TextInputLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    >
+                    android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/date"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/date"
-                        android:text="Date de naissance : "
                         android:layout_marginTop="25dp"
-                        android:textSize="15dp"
+                        android:text="Date de naissance : "
                         android:textColor="#000000"
-                        />
+                        android:textSize="15dp" />
 
                     <TextView
                         android:id="@+id/textView1"
-                        android:textSize="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/numberPicker1"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="25dp"
-                        android:text="JJ/ " />
+                        android:text="JJ/ "
+                        android:textSize="15dp" />
 
                     <TextView
                         android:id="@+id/textView2"
-                        android:textSize="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/numberPicker1"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="25dp"
-                        android:text="MM/ " />
+                        android:text="MM/ "
+                        android:textSize="15dp" />
 
                     <TextView
                         android:id="@+id/textView3"
-                        android:textSize="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/numberPicker1"
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="25dp"
-                        android:text="AAAA " />
+                        android:text="AAAA "
+                        android:textSize="15dp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    >
+                    android:layout_gravity="center">
 
                     <NumberPicker
                         android:id="@+id/numberPicker1"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                     <NumberPicker
                         android:id="@+id/numberPicker2"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                     <NumberPicker
                         android:id="@+id/numberPicker3"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        />
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-                </LinearLayout>
+                    android:orientation="vertical"></LinearLayout>
 
 
             </LinearLayout>
 
             <RelativeLayout
-                android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginBottom="20dp"
                 android:layout_marginLeft="2dp"
                 android:layout_marginRight="2dp"
+                android:orientation="vertical"
 
                 >
+
                 <Button
                     android:id="@+id/MyButton2"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:padding="20dp"
-                    android:text="Retour"
-                    android:onClick="Retourhome"
-                    android:textSize="20dp"
-                    android:background="#990000"
-                    android:textColor="#FEFEFE"
-
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
+                    android:background="#990000"
+                    android:onClick="Retourhome"
+                    android:padding="20dp"
+                    android:text="Retour"
+
+                    android:textColor="#FEFEFE"
+                    android:textSize="20dp"
 
                     />
 
@@ -209,15 +204,15 @@
                     android:id="@+id/MyButton"
                     android:layout_width="150dp"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@+id/MyButton2"
+                    android:background="#006633"
+                    android:onClick="Creationbdd"
                     android:padding="20dp"
                     android:text="Terminer"
-                    android:onClick="Creationbdd"
-                    android:textSize="20dp"
-                    android:background="#006633"
-                    android:textColor="#FEFEFE"
 
-                    android:layout_alignTop="@+id/MyButton2"
-                    android:layout_alignParentRight="true"
+                    android:textColor="#FEFEFE"
+                    android:textSize="20dp"
 
                     />
 
