--- a/app/src/main/res/layout/custom.xml
+++ b/app/src/main/res/layout/custom.xml
@@ -6,12 +6,12 @@
     <LinearLayout
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/nomChaine"
@@ -19,9 +19,8 @@
                 android:layout_height="wrap_content"
                 android:text="Video1"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textStyle="bold"
                 android:textSize="15dp"
-                />
+                android:textStyle="bold" />
         </LinearLayout>
 
     </LinearLayout>
@@ -30,7 +29,6 @@
         android:id="@+id/logoChaine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/rdv"
-        />
+        android:src="@drawable/rdv" />
 
 </LinearLayout>
