--- a/app/src/main/res/layout/bouquet_main.xml
+++ b/app/src/main/res/layout/bouquet_main.xml
@@ -7,29 +7,57 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Infos"
+            android:id="@+id/button"
+
+            />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:text="Deconnexion"
+            android:id="@+id/button2"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:onClick="Deconnexion"
+            />
+
+    </RelativeLayout>
+
     <TextView
         android:id="@+id/txt"
         android:layout_width="fill_parent"
         android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:background="#CC3333"
         android:gravity="center"
+        android:layout_marginTop="10dp"
         android:text="LISTE DES CHAÎNES"
         android:textColor="#FFFFFF"
+        android:textStyle="bold"
         android:textSize="25dp"
-        android:textStyle="bold" />
+        android:background="#CC3333"
+        />
 
     <EditText
         android:id="@+id/edit_recherche"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginBottom="20dp"
         android:layout_marginTop="10dp"
-        android:hint="Recherche..."></EditText>
+        android:layout_marginBottom="20dp"
+        android:hint="Recherche..."
+        >
+    </EditText>
 
     <ListView
-        android:id="@android:id/list"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:id="@android:id/list"/>
 
 </LinearLayout>
